i2psetproxy.js (0.73-1) UNRELEASED; urgency=low

  * Update bookmarks format

 -- idk <hankhill19580@gmail.com>  Mon, 22 JUN 2020 19:21:23 -0400

i2psetproxy.js (0.71-1) UNRELEASED; urgency=low

  * Fix incomplete bugfix from 0.69

 -- idk <hankhill19580@gmail.com>  Tue, 24 MAR 2020 0:19:59 -0400

i2psetproxy.js (0.71-1) UNRELEASED; urgency=low

  * Fix incomplete bugfix from 0.69

 -- idk <hankhill19580@gmail.com>  Tue, 24 MAR 2020 0:19:59 -0400

i2psetproxy.js (0.69-1) UNRELEASED; urgency=low

  * Add MuWire contextual ID
  * Fix bug occurring on certain modded I2P installs

 -- idk <hankhill19580@gmail.com>  Tue, 24 MAR 2020 0:12:02 -0400

i2psetproxy.js (0.67-1) UNRELEASED; urgency=low

  * Tweak some default settings that should have gone into 65

 -- idk <hankhill19580@gmail.com>  Tue, 17 MAR 2020 22:58:55 -0400

i2psetproxy.js (0.65-1) UNRELEASED; urgency=low

  * Initial prototype of certs implementation
  * Use "pinned apptabs" to minimize the number of tabs occupied by an app
  * Get ready for self-hosted updates but with bittorrent because it's cooler

 -- idk <hankhill19580@gmail.com>  Tue, 17 MAR 2020 22:58:55 -0400

i2psetproxy.js (0.63-1) UNRELEASED; urgency=low

  * other containerizers bugfix

 -- idk <hankhill19580@gmail.com>  Mon, 02 MAR 2020 17:54:26 -0400

i2psetproxy.js (0.61-1) UNRELEASED; urgency=low

  * other containerizers bugfix

 -- idk <hankhill19580@gmail.com>  Mon, 02 MAR 2020 17:46:24 -0400

i2psetproxy.js (0.59-1) UNRELEASED; urgency=low

  * transmission-rpc based torrent controls
  * bugfixes

 -- idk <hankhill19580@gmail.com>  Tue, 25 FEB 2020 20:52:19 -0400

i2psetproxy.js (0.57-1) UNRELEASED; urgency=low

  * Snowflake compatibility
  * Lots of small compatibility fixes
  * More linter errors
  * Make it multilingual again
  * Distribute a torrent and a magnet link with the plugin of the plugin

 -- idk <hankhill19580@gmail.com>  Thu, 4 JAN 2020 16:43:58 -0400

i2psetproxy.js (0.55-1) UNRELEASED; urgency=low
