@@ -1,6 +1,7 @@
 i2psetproxy.js (0.73-1) UNRELEASED; urgency=low
 
   * Update bookmarks format
+  * Deprecate WebRTC State Management
 
  -- idk <hankhill19580@gmail.com>  Mon, 22 JUN 2020 19:21:23 -0400
 
